[package]
name = "nes-emulator-rs"
version = "0.1.0"
authors = [ "hamadakafu <kafu.h1998@gmail.com>" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = "0.3.40"
wasm-bindgen = "*"
console_error_panic_hook = "*"
wasm-bindgen-futures = "*"
itertools = "*"

[workspace]
members = ["sample_amethyst"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'File',
  'console',
]